Ensure left-hand nav links are underlined in high contrast mode

--- a/www/styles/docs.scss
+++ b/www/styles/docs.scss
@@ -80,6 +80,9 @@
       text-decoration: none;
       color: var(--white);
       position: relative;
+      @media (forced-colors: active) {
+        text-decoration: underline;
+      }
 
       &[aria-current="page"] {
         color: var(--color-accent-4);
